# firmware-robo

./: README.md  cross_pic.txt  meson.build
src/common/: meson.build  pid.c  pid.h  strategy.c  strategy.h
src/firmware/: hal_real.c  main_robot.c  meson.build
src/hal/: i_robot.hpp  robot_hal.h
src/simulator/: hal_mock.cpp  hal_mock.hpp  main_pc.cpp  meson.build
src/simulator/hal/: robot_hal.h
